When finishing, News doesn't overwrite who originally wrote it. Moved map validation messages up into sub-page header. Map validation messages, and "Spend 1 to..." now in correct font. Set tabs to be 100% width on mobile. Can't test this, emulator isn't working.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,6 +46,10 @@
         width: 110px;
     }
     
+    .ui-tabs-panel {
+        width: 100%;
+    }
+    
     .grouping {
         width: 320px;
     }
